<resources>
    <string name="app_name">VietLottery</string>

    <!--title tab-->
    <string name="tab_mega">Mega 6/45</string>
    <string name="tab_max">Max 4D</string>

    <!--title page-->
    <string name="title_lottery_mega">Kết quả trúng thưởng Mega 6/45</string>
    <string name="luckyDay">Ngày quay thưởng</string>
    <string name="result">Kết quả</string>
    <string name="title_lottery_max4d">Kết quả trúng thưởng Max 4D</string>



    <string name="giai_thuong">Giải thưởng</string>
    <string name="ket_qua">Kết quả</string>
    <string name="so_luong">Số lượng</string>
    <string name="gia_tri">Giá trị (đồng)</string>
    <string name="giai_nhat">Giải nhất</string>
    <string name="giai_nhi">Giải nhì</string>
    <string name="giai_ba">Giải ba</string>
    <string name="giai_khuyen_khich_1">Khuyến khích 1</string>
    <string name="giai_khuyen_khich_2">Khuyến khích 2</string>

    <string name="trung_khop">Trùng khớp</string>
    <string name="so_luong_giai">Số lượng giải</string>
    <string name="gia_tri_giai">Giá trị giải (đồng)</string>

    <!--title activity-->
    <string name="title_activity_list_previous_mega">Các lần quay trước Mega 6/45</string>
    <string name="title_activity_detail_mega">Jackpot</string>
    <string name="title_activity_list_previous_max">Các lần quay trước Max 4D</string>
    <string name="time_up">Đã đến giờ quay thưởng</string>
    <string name="turn_on_tv">Bật TV để xem quay số trúng thưởng</string>
    <string name="content">Đang quay số trúng thưởng</string>
    <string name="network_conn_title">Lỗi kết nối</string>
    <string name="network_conn_content">Ứng dụng cần kết nối internet để tải kết quả gần nhất</string>
    <string name="network_conn_button">Kết nối</string>


    <string name="banner_id">ca-app-pub-6092828069522249/5180068013</string>
    <string name="banner_full_id">ca-app-pub-6092828069522249/6796402015</string>


</resources>
