<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="360dp"
    android:minHeight="150dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/xxhdpi_8dp"
        android:text="@string/network_conn_title"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/xxhdpi_8dp"
        android:text="@string/network_conn_content" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/xxhdpi_8dp"
        android:background="@drawable/custom_button"
        android:text="@string/network_conn_button"
        android:textColor="@color/white" />

</LinearLayout>