<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/title_padding"
        android:text="@string/title_lottery_mega"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxhdpi_8dp"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:id="@+id/item_date"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/luckyDay" />


        <TextView
            android:gravity="center"
            android:id="@+id/item_result"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/result" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="@dimen/xxhdpi_8dp"
        android:layout_width="match_parent"
        android:id="@+id/recycler_list_previous"
        android:layout_height="match_parent"/>

</LinearLayout>