<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/xxhdpi_8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_time_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/textPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_time_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/textPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="@dimen/xxhdpi_4dp"
        android:background="@color/textSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/xxhdpi_8dp">

        <TextView
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/giai_nhat" />

        <TextView
            android:id="@+id/txt_giai_nhat"
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="@dimen/xxhdpi_4dp"
        android:background="@color/textSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/xxhdpi_8dp">

        <TextView
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/giai_nhi" />

        <TextView
            android:id="@+id/txt_giai_nhi"
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="@dimen/xxhdpi_4dp"
        android:background="@color/textSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/xxhdpi_8dp">

        <TextView
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/giai_ba" />

        <TextView
            android:id="@+id/txt_giai_ba"
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="@dimen/xxhdpi_4dp"
        android:background="@color/textSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/xxhdpi_8dp">

        <TextView
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/giai_khuyen_khich_1" />

        <TextView
            android:id="@+id/txt_giai_kk1"
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="@dimen/xxhdpi_4dp"
        android:background="@color/textSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/xxhdpi_8dp">

        <TextView
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/giai_khuyen_khich_2" />

        <TextView
            android:id="@+id/txt_giai_kk2"
            style="@style/TextItemLottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/xxhdpi_8dp"
        android:background="@color/colorPrimary" />

</LinearLayout>